fix slider appear at wrong position

--- a/app/src/components/searchWidget/styles/widget.scss
+++ b/app/src/components/searchWidget/styles/widget.scss
@@ -10,6 +10,7 @@ $break-small: 375px;
     width: 455px;
     margin: 20px;
     text-align: left;
+    z-index: 999999;
 }
 
 .widgetContainer {
